Att.img teamDev

--- a/Scrum/equipe.html
+++ b/Scrum/equipe.html
@@ -45,7 +45,7 @@
         <p>São todos aqueles que desenvolvem o projeto, atuando em
         colaboração e sempre se autogerenciando a respeito de atividades e
         metas do projeto!</p>
-        <img src="imagens/equipescrum.png" alt="time">
+        <img src="imagens/equipescrum.png" alt="time" width="900" height="600">
 
         <a href="pilares.html" id="btngeral"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Pilares<ion-icon name="arrow-forward-outline"></ion-icon></a>
         <br><br><br><br><br><br><br><br>
